# squadron

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  main.rs  procedures.rs  types.rs
core/src/procedures/: parse_args.rs  parse_to_json.rs  postman.rs  select_type.rs
core/src/procedures/postman/: parse_postman_requests.rs
core/src/types/: args.rs  folder.rs  request.rs  squadron.rs
src/: get_info.rs  lib.rs  main.rs  parse_items.rs  read_file_and_parse_to_json.rs  types.rs
src/types/: request.rs
