[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "a cli tool for creating client-side api handlers from docs."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.3"
json = "0.12.4"
serde_json = "1.0.94"
